--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,14 @@ body, input, button {
   font-family: 'Roboto Mono', monospace;
   background-color: #F5EDCE;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 h1 {
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
 }
 
 .container {
